Moving properties to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8085
+server.port=8080
+
+application.build_sha=BUILD_SHA
+application.version=1.0.0
+application.description=pre-interview technical test
