Moving properties to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
+server.port=8085
 
-application.build_sha=BUILD_SHA
+application.build_sha={{build_sha}}
 application.version=1.0.0
-application.description=pre-interview technical test
+application.description=pre-interview technical test port updated
