--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8085
 
 application.build_sha={{build_sha}}
 application.version=1.0.0
-application.description=pre-interview technical test port updated
+application.description=pre-interview technical test port
